[gd_scene load_steps=48 format=3 uid="uid://co835sxjmwqpp"]

[ext_resource type="PackedScene" uid="uid://c11c681iajuem" path="res://player.tscn" id="1_76l3e"]
[ext_resource type="Script" path="res://level_sphene.gd" id="1_pfqqn"]
[ext_resource type="PackedScene" uid="uid://8e408ver1q8g" path="res://pause_menu.tscn" id="2_efqbn"]
[ext_resource type="Curve3D" uid="uid://bwnfhsjlkj3n3" path="res://tether_curve.tres" id="2_ud3sf"]
[ext_resource type="Material" uid="uid://djbn1uhpnv5mu" path="res://spheneplat01.tres" id="3_fc5ub"]
[ext_resource type="Material" uid="uid://djuadrhfjagpe" path="res://icebridge01.tres" id="4_havcc"]
[ext_resource type="Material" uid="uid://dpfunv4aeuepp" path="res://short_tether.tres" id="4_ybxh4"]
[ext_resource type="PackedScene" uid="uid://5sw64qpvq5ij" path="res://icicle.glb" id="5_hdy1e"]
[ext_resource type="Shader" uid="uid://cbuv61yfwkqs0" path="res://zone_shader.tres" id="6_v2xkm"]
[ext_resource type="ArrayMesh" uid="uid://bkdhib5onw3ov" path="res://circlemesh.obj" id="7_aiueh"]
[ext_resource type="Texture2D" uid="uid://bqjoqit0dvpr4" path="res://sphene_face2.png" id="8_eveo1"]
[ext_resource type="Material" uid="uid://bfgmcvbudebjc" path="res://broken_tether.tres" id="12_0af0q"]
[ext_resource type="AudioStream" uid="uid://bnan1n7x4n0n1" path="res://audio/yippee-tbh.mp3" id="13_2kjwe"]
[ext_resource type="AudioStream" uid="uid://btibu604ftlxb" path="res://audio/ww_salvatore_sploosh.mp3" id="14_ac8h0"]
[ext_resource type="AudioStream" uid="uid://y14pqn84k233" path="res://audio/oh-no.mp3" id="15_i5gdm"]
[ext_resource type="AudioStream" uid="uid://brkybrbmwc1o3" path="res://audio/yosh.mp3" id="16_e83vq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2vx2m"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_2eqhj"]
sky_material = SubResource("ProceduralSkyMaterial_2vx2m")

[sub_resource type="Environment" id="Environment_lrja3"]
background_mode = 2
sky = SubResource("Sky_2eqhj")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_apld3"]
material = ExtResource("3_fc5ub")
size = Vector3(8, 3, 30)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_23v64"]
data = PackedVector3Array(-4, 1.5, 15, 4, 1.5, 15, -4, -1.5, 15, 4, 1.5, 15, 4, -1.5, 15, -4, -1.5, 15, 4, 1.5, -15, -4, 1.5, -15, 4, -1.5, -15, -4, 1.5, -15, -4, -1.5, -15, 4, -1.5, -15, 4, 1.5, 15, 4, 1.5, -15, 4, -1.5, 15, 4, 1.5, -15, 4, -1.5, -15, 4, -1.5, 15, -4, 1.5, -15, -4, 1.5, 15, -4, -1.5, -15, -4, 1.5, 15, -4, -1.5, 15, -4, -1.5, -15, 4, 1.5, 15, -4, 1.5, 15, 4, 1.5, -15, -4, 1.5, 15, -4, 1.5, -15, 4, 1.5, -15, -4, -1.5, 15, 4, -1.5, 15, -4, -1.5, -15, 4, -1.5, 15, 4, -1.5, -15, -4, -1.5, -15)

[sub_resource type="BoxMesh" id="BoxMesh_1k5p1"]
material = ExtResource("3_fc5ub")
size = Vector3(10, 3, 44)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7uvy6"]
data = PackedVector3Array(-5, 1.5, 22, 5, 1.5, 22, -5, -1.5, 22, 5, 1.5, 22, 5, -1.5, 22, -5, -1.5, 22, 5, 1.5, -22, -5, 1.5, -22, 5, -1.5, -22, -5, 1.5, -22, -5, -1.5, -22, 5, -1.5, -22, 5, 1.5, 22, 5, 1.5, -22, 5, -1.5, 22, 5, 1.5, -22, 5, -1.5, -22, 5, -1.5, 22, -5, 1.5, -22, -5, 1.5, 22, -5, -1.5, -22, -5, 1.5, 22, -5, -1.5, 22, -5, -1.5, -22, 5, 1.5, 22, -5, 1.5, 22, 5, 1.5, -22, -5, 1.5, 22, -5, 1.5, -22, 5, 1.5, -22, -5, -1.5, 22, 5, -1.5, 22, -5, -1.5, -22, 5, -1.5, 22, 5, -1.5, -22, -5, -1.5, -22)

[sub_resource type="BoxMesh" id="BoxMesh_iu55t"]
material = ExtResource("4_havcc")
size = Vector3(12, 1, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_apft8"]
data = PackedVector3Array(-6, 0.5, 3, 6, 0.5, 3, -6, -0.5, 3, 6, 0.5, 3, 6, -0.5, 3, -6, -0.5, 3, 6, 0.5, -3, -6, 0.5, -3, 6, -0.5, -3, -6, 0.5, -3, -6, -0.5, -3, 6, -0.5, -3, 6, 0.5, 3, 6, 0.5, -3, 6, -0.5, 3, 6, 0.5, -3, 6, -0.5, -3, 6, -0.5, 3, -6, 0.5, -3, -6, 0.5, 3, -6, -0.5, -3, -6, 0.5, 3, -6, -0.5, 3, -6, -0.5, -3, 6, 0.5, 3, -6, 0.5, 3, 6, 0.5, -3, -6, 0.5, 3, -6, 0.5, -3, 6, 0.5, -3, -6, -0.5, 3, 6, -0.5, 3, -6, -0.5, -3, 6, -0.5, 3, 6, -0.5, -3, -6, -0.5, -3)

[sub_resource type="BoxShape3D" id="BoxShape3D_uit6n"]
size = Vector3(8, 4, 6)

[sub_resource type="BoxMesh" id="BoxMesh_5px8w"]
material = ExtResource("4_havcc")
size = Vector3(12, 1, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_p2e7p"]
data = PackedVector3Array(-6, 0.5, 3, 6, 0.5, 3, -6, -0.5, 3, 6, 0.5, 3, 6, -0.5, 3, -6, -0.5, 3, 6, 0.5, -3, -6, 0.5, -3, 6, -0.5, -3, -6, 0.5, -3, -6, -0.5, -3, 6, -0.5, -3, 6, 0.5, 3, 6, 0.5, -3, 6, -0.5, 3, 6, 0.5, -3, 6, -0.5, -3, 6, -0.5, 3, -6, 0.5, -3, -6, 0.5, 3, -6, -0.5, -3, -6, 0.5, 3, -6, -0.5, 3, -6, -0.5, -3, 6, 0.5, 3, -6, 0.5, 3, 6, 0.5, -3, -6, 0.5, 3, -6, 0.5, -3, 6, 0.5, -3, -6, -0.5, 3, 6, -0.5, 3, -6, -0.5, -3, 6, -0.5, 3, 6, -0.5, -3, -6, -0.5, -3)

[sub_resource type="BoxMesh" id="BoxMesh_kg2uc"]
material = ExtResource("3_fc5ub")
size = Vector3(10, 3, 44)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_durle"]
data = PackedVector3Array(-5, 1.5, 22, 5, 1.5, 22, -5, -1.5, 22, 5, 1.5, 22, 5, -1.5, 22, -5, -1.5, 22, 5, 1.5, -22, -5, 1.5, -22, 5, -1.5, -22, -5, 1.5, -22, -5, -1.5, -22, 5, -1.5, -22, 5, 1.5, 22, 5, 1.5, -22, 5, -1.5, 22, 5, 1.5, -22, 5, -1.5, -22, 5, -1.5, 22, -5, 1.5, -22, -5, 1.5, 22, -5, -1.5, -22, -5, 1.5, 22, -5, -1.5, 22, -5, -1.5, -22, 5, 1.5, 22, -5, 1.5, 22, 5, 1.5, -22, -5, 1.5, 22, -5, 1.5, -22, 5, 1.5, -22, -5, -1.5, 22, 5, -1.5, 22, -5, -1.5, -22, 5, -1.5, 22, 5, -1.5, -22, -5, -1.5, -22)

[sub_resource type="BoxMesh" id="BoxMesh_0s0ae"]
material = ExtResource("4_havcc")
size = Vector3(12, 1, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_cfxka"]
data = PackedVector3Array(-6, 0.5, 3, 6, 0.5, 3, -6, -0.5, 3, 6, 0.5, 3, 6, -0.5, 3, -6, -0.5, 3, 6, 0.5, -3, -6, 0.5, -3, 6, -0.5, -3, -6, 0.5, -3, -6, -0.5, -3, 6, -0.5, -3, 6, 0.5, 3, 6, 0.5, -3, 6, -0.5, 3, 6, 0.5, -3, 6, -0.5, -3, 6, -0.5, 3, -6, 0.5, -3, -6, 0.5, 3, -6, -0.5, -3, -6, 0.5, 3, -6, -0.5, 3, -6, -0.5, -3, 6, 0.5, 3, -6, 0.5, 3, 6, 0.5, -3, -6, 0.5, 3, -6, 0.5, -3, 6, 0.5, -3, -6, -0.5, 3, 6, -0.5, 3, -6, -0.5, -3, 6, -0.5, 3, 6, -0.5, -3, -6, -0.5, -3)

[sub_resource type="BoxMesh" id="BoxMesh_4hjsp"]
material = ExtResource("4_havcc")
size = Vector3(12, 1, 6)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7yu5w"]
data = PackedVector3Array(-6, 0.5, 3, 6, 0.5, 3, -6, -0.5, 3, 6, 0.5, 3, 6, -0.5, 3, -6, -0.5, 3, 6, 0.5, -3, -6, 0.5, -3, 6, -0.5, -3, -6, 0.5, -3, -6, -0.5, -3, 6, -0.5, -3, 6, 0.5, 3, 6, 0.5, -3, 6, -0.5, 3, 6, 0.5, -3, 6, -0.5, -3, 6, -0.5, 3, -6, 0.5, -3, -6, 0.5, 3, -6, -0.5, -3, -6, 0.5, 3, -6, -0.5, 3, -6, -0.5, -3, 6, 0.5, 3, -6, 0.5, 3, 6, 0.5, -3, -6, 0.5, 3, -6, 0.5, -3, 6, 0.5, -3, -6, -0.5, 3, 6, -0.5, 3, -6, -0.5, -3, 6, -0.5, 3, 6, -0.5, -3, -6, -0.5, -3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wr1rr"]
render_priority = 0
shader = ExtResource("6_v2xkm")
shader_parameter/Circle_Color = Color(0.321569, 0.745098, 1, 1)
shader_parameter/Extra_Opacity = 0.6
shader_parameter/Speed = Vector2(0, 1.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_32il1"]
material = SubResource("ShaderMaterial_wr1rr")
height = 4.0
cap_top = false
cap_bottom = false

[sub_resource type="BoxShape3D" id="BoxShape3D_33bie"]
size = Vector3(100, 2, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5kf6w"]
albedo_color = Color(0.0995296, 0.11203, 0.189664, 0.486275)
disable_receive_shadows = true

[sub_resource type="PlaneMesh" id="PlaneMesh_t4noa"]
lightmap_size_hint = Vector2i(502, 502)
material = SubResource("StandardMaterial3D_5kf6w")
uv2_padding = 0.0
size = Vector2(100, 100)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j8clf"]
render_priority = 0
shader = ExtResource("6_v2xkm")
shader_parameter/Circle_Color = Color(0.0235294, 0.847059, 0.109804, 1)
shader_parameter/Extra_Opacity = 0.1
shader_parameter/Speed = Vector2(0, 0.8)

[sub_resource type="SphereShape3D" id="SphereShape3D_k4bpq"]
radius = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_416f2"]
size = Vector3(8, 5, 30)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_usng3"]
render_priority = 0
shader = ExtResource("6_v2xkm")
shader_parameter/Circle_Color = Color(0.0235294, 0.847059, 0.109804, 1)
shader_parameter/Extra_Opacity = 0.1
shader_parameter/Speed = Vector2(0, 0.8)

[sub_resource type="BoxMesh" id="BoxMesh_rje3a"]
material = SubResource("ShaderMaterial_usng3")
size = Vector3(8, 10, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xae3x"]
albedo_texture = ExtResource("8_eveo1")

[sub_resource type="SphereMesh" id="SphereMesh_1c5hr"]
material = SubResource("StandardMaterial3D_xae3x")
radius = 20.0
height = 40.0

[sub_resource type="BoxMesh" id="BoxMesh_02cj1"]

[node name="Level-Sphene" type="Node3D"]
script = ExtResource("1_pfqqn")
curve = ExtResource("2_ud3sf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lrja3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_76l3e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 12)
top_level = true
collision_layer = 3
collision_mask = 3
linear_damp = 3.0
constant_force = Vector3(0, -9.8, 0)

[node name="Tether" type="Node3D" parent="."]

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Tether"]
visible = false
material_override = ExtResource("4_ybxh4")
polygon = PackedVector2Array()
mode = 2
path_node = NodePath("../Path3D")
path_interval_type = 0
path_interval = 1.0
path_simplify_angle = 0.0
path_rotation = 2
path_local = false
path_continuous_u = true
path_u_distance = 1.0
path_joined = false

[node name="Path3D" type="Path3D" parent="Tether"]
curve = ExtResource("2_ud3sf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("2_efqbn")]

[node name="Stage" type="Node3D" parent="."]

[node name="PlatformCenter" type="MeshInstance3D" parent="Stage"]
mesh = SubResource("BoxMesh_apld3")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/PlatformCenter"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/PlatformCenter/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_23v64")

[node name="PlatformWest" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21, 0, -7)
mesh = SubResource("BoxMesh_1k5p1")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/PlatformWest"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/PlatformWest/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7uvy6")

[node name="IceBridgeNW" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, -6)
mesh = SubResource("BoxMesh_iu55t")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/IceBridgeNW"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeNW/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_apft8")

[node name="NWZone" type="Area3D" parent="Stage/IceBridgeNW"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeNW/NWZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_uit6n")

[node name="IceBridgeSW" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 1, 6)
mesh = SubResource("BoxMesh_5px8w")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/IceBridgeSW"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeSW/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_p2e7p")

[node name="SWZone" type="Area3D" parent="Stage/IceBridgeSW"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeSW/SWZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_uit6n")

[node name="PlatformEast" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21, 0, -7)
mesh = SubResource("BoxMesh_kg2uc")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/PlatformEast"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/PlatformEast/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_durle")

[node name="IceBridgeNE" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -6)
mesh = SubResource("BoxMesh_0s0ae")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/IceBridgeNE"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeNE/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_cfxka")

[node name="NEZone" type="Area3D" parent="Stage/IceBridgeNE"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeNE/NEZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_uit6n")

[node name="IceBridgeSE" type="MeshInstance3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 6)
mesh = SubResource("BoxMesh_4hjsp")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Stage/IceBridgeSE"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeSE/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7yu5w")

[node name="SEZone" type="Area3D" parent="Stage/IceBridgeSE"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Stage/IceBridgeSE/SEZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_uit6n")

[node name="Hazards" type="Node3D" parent="."]

[node name="Icicle1NE" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -16, 3, 18)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle1NE"]
visible = false
mesh = SubResource("CylinderMesh_32il1")

[node name="Icicle1SE" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -6, 3, 18)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle1SE"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle1SW" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 6, 3, 18)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle1SW"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle1NW" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 16, 3, 18)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle1NW"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle2NE" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -30, 3, -10)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle2NE"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle2SE" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -30, 3, 2)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle2SE"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle2SW" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 30, 3, 2)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle2SW"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="Icicle2NW" parent="Hazards" instance=ExtResource("5_hdy1e")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 30, 3, -10)

[node name="IcicleCharge" type="MeshInstance3D" parent="Hazards/Icicle2NW"]
visible = false
mesh = SubResource("CylinderMesh_32il1")
skeleton = NodePath("../../Icicle1NE")

[node name="DeathPlane" type="Area3D" parent="Hazards"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hazards/DeathPlane"]
shape = SubResource("BoxShape3D_33bie")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Hazards/DeathPlane"]
mesh = SubResource("PlaneMesh_t4noa")

[node name="Triggers" type="Node3D" parent="."]

[node name="StartTrigger" type="Area3D" parent="Triggers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -12)
collision_layer = 2
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Triggers/StartTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
material_override = SubResource("ShaderMaterial_j8clf")
mesh = ExtResource("7_aiueh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Triggers/StartTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("SphereShape3D_k4bpq")

[node name="Label3D" type="Label3D" parent="Triggers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.165, -12)
pixel_size = 0.0825
modulate = Color(0.0156863, 0.662745, 0.156863, 1)

[node name="MainPlatTrigger" type="Area3D" parent="Triggers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Triggers/MainPlatTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_416f2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Triggers/MainPlatTrigger/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
mesh = SubResource("BoxMesh_rje3a")

[node name="Spheren" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, -52)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spheren"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("SphereMesh_1c5hr")

[node name="TrialCountdown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IceTimerFirst" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="WaitForSecondIceNE" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WaitForSecondIceSE" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WaitForSecondIceSW" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WaitForSecondIceNW" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WaitForSecondIceTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IceTimerSecond" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="SecondTrialTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="BrokenTetherMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.90234, 18.9893, 0)
visible = false
mesh = SubResource("BoxMesh_02cj1")
surface_material_override/0 = ExtResource("12_0af0q")

[node name="ShortTetherMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.625, 18.9893, 0)
visible = false
mesh = SubResource("BoxMesh_02cj1")
surface_material_override/0 = ExtResource("4_ybxh4")

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[node name="Yippee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2kjwe")

[node name="Sploosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ac8h0")

[node name="Ohno" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_i5gdm")

[node name="Yosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_e83vq")

[connection signal="body_entered" from="Stage/IceBridgeNW/NWZone" to="." method="_on_nw_zone_body_entered"]
[connection signal="body_entered" from="Stage/IceBridgeSW/SWZone" to="." method="_on_sw_zone_body_entered"]
[connection signal="body_entered" from="Stage/IceBridgeNE/NEZone" to="." method="_on_ne_zone_body_entered"]
[connection signal="body_entered" from="Stage/IceBridgeSE/SEZone" to="." method="_on_se_zone_body_entered"]
[connection signal="body_entered" from="Hazards/DeathPlane" to="." method="_on_death_plane_body_entered"]
[connection signal="area_entered" from="Triggers/StartTrigger" to="." method="_on_start_trigger_area_entered"]
[connection signal="body_entered" from="Triggers/StartTrigger" to="." method="_on_start_trigger_body_entered"]
[connection signal="body_entered" from="Triggers/MainPlatTrigger" to="." method="_on_main_plat_trigger_body_entered"]
[connection signal="body_exited" from="Triggers/MainPlatTrigger" to="." method="_on_main_plat_trigger_body_exited"]
[connection signal="timeout" from="TrialCountdown" to="." method="_on_trial_countdown_timeout"]
[connection signal="timeout" from="IceTimerFirst" to="." method="_on_ice_timer_first_timeout"]
[connection signal="timeout" from="WaitForSecondIceNE" to="." method="_on_wait_for_second_ice_ne_timeout"]
[connection signal="timeout" from="WaitForSecondIceSE" to="." method="_on_wait_for_second_ice_se_timeout"]
[connection signal="timeout" from="WaitForSecondIceSW" to="." method="_on_wait_for_second_ice_sw_timeout"]
[connection signal="timeout" from="WaitForSecondIceNW" to="." method="_on_wait_for_second_ice_nw_timeout"]
[connection signal="timeout" from="WaitForSecondIceTimer" to="." method="_on_wait_for_second_ice_timer_timeout"]
[connection signal="timeout" from="IceTimerSecond" to="." method="_on_ice_timer_second_timeout"]
[connection signal="timeout" from="SecondTrialTimer" to="." method="_on_second_trial_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="CanvasLayer/PauseMenu" method="_on_death_timer_timeout"]
